final version with meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./img/logo.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<meta
+			name="description"
+			content="Автомобильные, железнодорожные и контейнерные грузоперевозки. Экспедирование вашего груза. Отслеживание и доставка точно в срок."
+		/>
+		<meta name="robots" content="index,follow" />
+		<link rel="icon" href="./img/logo.ico" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -12,7 +17,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>Meridian | Грузоперевозки</title>
+		<title>Meridian | Грузоперевозки различными видами транспорта</title>
 	</head>
 
 	<body>
